vendor/github.com/richardlehane/webarchive/examples/jhove/invalid/invalid-warcfile-lonely-warcinfo-metadata.warc
WARC/1.0
WARC-Type: warcinfo



WARC/1.0
WARC-Type: metadata



